# MomoDisplay

./: .gitignore  README.md  README_EN.md  README_zh.md
01_Arduino_Libraries/U8g2/: README.md  library.json  library.properties
01_Arduino_Libraries/U8g2/src/: U8g2lib.h  U8x8lib.h
02_Example/Arduino/10_U8G2_Test/: 10_U8G2_Test.ino  README.md
02_Example/Arduino/11_WIFI_U8G2_Text/: 11_WIFI_U8G2_Text.ino  ST7305_U8g2.cpp  sketch.yaml
02_Example/Arduino/12_BLE_Image_Display/: 12_BLE_Image_Display.ino  ST7305_U8g2.h
02_Example/ESP-IDF/11_U8G2_Test/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
02_Example/ESP-IDF/11_U8G2_Test/components/app_bsp/: CMakeLists.txt  lvgl_bsp.cpp  lvgl_bsp.h
02_Example/ESP-IDF/11_U8G2_Test/components/port_bsp/: CMakeLists.txt  display_bsp.cpp  display_bsp.h
02_Example/ESP-IDF/11_U8G2_Test/components/u8g2/: CMakeLists.txt
02_Example/ESP-IDF/11_U8G2_Test/components/u8g2_st7305/: CMakeLists.txt  u8g2_st7305.c  u8g2_st7305.h
02_Example/ESP-IDF/11_U8G2_Test/components/ui_bsp/: CMakeLists.txt
02_Example/ESP-IDF/11_U8G2_Test/components/ui_bsp/custom/: custom.c  custom.h  lv_conf_ext.h
02_Example/ESP-IDF/11_U8G2_Test/components/user_app/: CMakeLists.txt  user_app.cpp  user_app.h
02_Example/ESP-IDF/11_U8G2_Test/main/: CMakeLists.txt  idf_component.yml  main.cpp  user_config.h
android/: build_apk.sh
android/BleImageSender/: README.md  build_apk.sh
android/BleImageSender/app/src/main/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
firmware/MomoDisplay/: MomoDisplay.ino  sketch.yaml
(+5 files in other folders)
